--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS YES)
 
 set(SOURCES_LIST
     src/tools/variable_printer.cpp
-    src/tools/print_bootstrap.cpp)
+    src/tools/print_bootstrap.cpp
+    src/main.cpp)
 
 file(GLOB SOURCES_LIST_BASIC_TEST src/pcr3bp_basic_test/*.cpp)
 list(APPEND SOURCES_LIST ${SOURCES_LIST_BASIC_TEST})
@@ -18,6 +19,7 @@ add_executable(${PROJECT_NAME} ${SOURCES_LIST})
 
 add_dependencies(${PROJECT_NAME} gtest)
 add_dependencies(${PROJECT_NAME} carina)
+add_dependencies(${PROJECT_NAME} taurus)
 
 add_subdirectory(src/googletest)
 add_subdirectory(src/carina)
@@ -32,5 +34,31 @@ link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/lib)
 target_link_libraries(${PROJECT_NAME} PRIVATE gtest)
 target_link_libraries(${PROJECT_NAME} PRIVATE gtest_main)
 
-link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/src/carina)
+# link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/src/carina)
 target_link_libraries(${PROJECT_NAME} PRIVATE carina)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE taurus)
+
+################################################################################
+# plot components build
+################################################################################
+function(plot_component SLAVE_NAME SOURCE_FILE)
+
+    add_executable(${SLAVE_NAME} ${SOURCE_FILE})
+    target_include_directories(${SLAVE_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src)
+    # target_include_directories(${SLAVE_NAME} PRIVATE ${TAURUS_INCLUDE_DIRS})
+    # target_include_directories(${SLAVE_NAME} PRIVATE ${CARINA_INCLUDE_DIRS})
+    target_link_libraries(${SLAVE_NAME} PRIVATE taurus)
+    target_link_libraries(${SLAVE_NAME} PRIVATE carina)
+
+endfunction()
+
+if(TRUE)
+
+plot_component( plot_reg_evolution_lyapunov_multi
+    src/plot_1/reg_evolution_lyapunov_plot.multi.cpp)
+
+plot_component( plot_reg_evolution_lyapunov_multi_std
+    src/plot_1/reg_evolution_lyapunov_plot.multi.std.cpp)
+
+endif()
