add capd_utils submodule'

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/bluesky"]
 	path = src/bluesky
 	url = https://github.com/AleksanderPasiut/bluesky
+[submodule "src/capd_utils"]
+	path = src/capd_utils
+	url = https://github.com/AleksanderPasiut/capd_utils
