split reg evolution 4 file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ plot_component( plot_reg_evolution_lyapunov_multi
     src/plot_1/reg_evolution_lyapunov_plot.multi.cpp)
 
 plot_component( plot_rhez_u_24 
+    src/plot_1/objects/reg_evolution4.cpp
     src/plot_2/rhez_u_24_plot.cpp
     src/tools/variable_printer.cpp)
 
