move hset renderables container to new file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ plot_component( plot_rhez_u_24
     src/plot_2/orbit_from_coordsys_container.cpp
     src/plot_2/origins_from_coordsys_container.cpp
     src/plot_2/hset_parameters_to_coordsys_converter.cpp
+    src/plot_2/hset_renderables_container.cpp
     src/tools/variable_printer.cpp)
 
 endif()
